--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ script:
   - yarn test
   - docker build -t local/app .
   - docker run --rm -p3000:3000 -d local/app
-  - curl --retry 10 --retry-connrefused http://localhost:3000/sum\?a\=1\&b\=2 | grep "{\"sum\":3}"
+  - curl --version
+  - curl --retry 10 http://localhost:3000/sum\?a\=1\&b\=2 | grep "{\"sum\":3}"
